Grid style fixes. Fixed column-selector height to 40% so there is only one scrollbar now.

--- a/bundles/framework/divmanazer/scss/grid.scss
+++ b/bundles/framework/divmanazer/scss/grid.scss
@@ -39,7 +39,7 @@ div.icon-menu {
 }
 
 div.column-selector {
-    max-height: 350px;
+    max-height: 40%;
     width: 270px;
     overflow: auto;
     position: absolute;
